# specter

./: LICENSE  meson.build
contrib/: vcd.ebnf
src/: mainWindow.cxx  mainWindow.hxx  meson.build  specter.cxx
src/ui/: specter.ui
